--- a/course-details.html
+++ b/course-details.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="img/favicon.png" type="image/png">
-	<title>Learn IT Education</title>
+	<title>Ramadhan Di Syuhada</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="vendors/linericon/style.css">
@@ -366,9 +366,9 @@
 				<p class="col-lg-8 col-md-8 footer-text m-0">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 					Copyright &copy;
-					<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
-					made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com"
-						target="_blank">Colorlib</a>
+					<script>document.write(new Date().getFullYear());</script> All rights reserved | Ramadhan Di Syuhada
+					<i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="#" target="_blank">izzawildan</a>
+					target="_blank">Colorlib</a>
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 				</p>
 				<div class="col-lg-4 col-md-4 footer-social">
