--- a/about-us.html
+++ b/about-us.html
@@ -231,9 +231,9 @@
 	<section class="team_area p_120">
 		<div class="container">
 			<div class="main_title">
-				<h2>Meet Our Faculty</h2>
-				<p>There is a moment in the life of any aspiring astronomer that it is time to buy that first telescope.
-					It’s exciting to think about setting up your own viewing station.</p>
+				<h2>Struktur Kepanitiaan</h2>
+				<p>Berikut adalah struktur kepanitiaan yang bertugas dalam mengelola dan mengorganisir kegiatan Ramadhan
+					di Syuhada untuk memastikan semua program berjalan dengan baik dan lancar.</p>
 			</div>
 			<div class="row team_inner">
 				<div class="col-lg-3 col-sm-6">
@@ -312,7 +312,7 @@
 				<div class="item">
 					<div class="testi_item">
 						<img src="img/testimonials/testi-3.png" alt="">
-						<h4>Fannie Rowe</h4>
+						<h4>Ujang Candra</h4>
 						<ul class="list">
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
@@ -328,7 +328,7 @@
 				<div class="item">
 					<div class="testi_item">
 						<img src="img/testimonials/testi-3.png" alt="">
-						<h4>Fannie Rowe</h4>
+						<h4>Ujang Candra</h4>
 						<ul class="list">
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
@@ -344,7 +344,7 @@
 				<div class="item">
 					<div class="testi_item">
 						<img src="img/testimonials/testi-3.png" alt="">
-						<h4>Fannie Rowe</h4>
+						<h4>Ujang Candra</h4>
 						<ul class="list">
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
@@ -366,10 +366,10 @@
 	<section class="impress_area p_120">
 		<div class="container">
 			<div class="impress_inner text-center">
-				<h2>Become an instructor</h2>
+				<h2>Donasi Buka Puasa</h2>
 				<p>There is a moment in the life of any aspiring astronomer that it is time to buy that first telescope.
 					It’s exciting to think about setting up your own viewing station whether that is on the deck</p>
-				<a class="main_btn2" href="#">Apply for the post</a>
+				<a class="main_btn2" href="#">Donasi Sekarang</a>
 			</div>
 		</div>
 	</section>
@@ -381,23 +381,23 @@
 			<div class="row">
 				<div class="col-lg-2  col-md-6 col-sm-6">
 					<div class="single-footer-widget tp_widgets">
-						<h6 class="footer_title">Top Products</h6>
+						<h6 class="footer_title">Events</h6>
 						<ul class="list">
-							<li><a href="#">Managed Website</a></li>
-							<li><a href="#">Manage Reputation</a></li>
-							<li><a href="#">Power Tools</a></li>
-							<li><a href="#">Marketing Service</a></li>
+							<li><a href="#">Semarak Ramadhan</a></li>
+							<li><a href="#">Lomba </a></li>
+							<li><a href="#">Tabligh Akbar</a></li>
+							<li><a href="#">Talkshow</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-lg-2  col-md-6 col-sm-6">
 					<div class="single-footer-widget tp_widgets">
-						<h6 class="footer_title">Quick Links</h6>
+						<h6 class="footer_title">Kajian</h6>
 						<ul class="list">
-							<li><a href="#">Jobs</a></li>
-							<li><a href="#">Brand Assets</a></li>
-							<li><a href="#">Investor Relations</a></li>
-							<li><a href="#">Terms of Service</a></li>
+							<li><a href="#">Kajian Subuh</a></li>
+							<li><a href="#">Kajian Sore</a></li>
+							<li><a href="#">Kajian Iktikaf</a></li>
+							<li><a href="#">Kajian tematik</a></li>
 						</ul>
 					</div>
 				</div>
@@ -405,21 +405,21 @@
 					<div class="single-footer-widget tp_widgets">
 						<h6 class="footer_title">Features</h6>
 						<ul class="list">
-							<li><a href="#">Jobs</a></li>
-							<li><a href="#">Brand Assets</a></li>
-							<li><a href="#">Investor Relations</a></li>
-							<li><a href="#">Terms of Service</a></li>
+							<li><a href="#">Kajian Subuh</a></li>
+							<li><a href="#">Kajian Sore</a></li>
+							<li><a href="#">Kajian Iktikaf</a></li>
+							<li><a href="#">Kajian tematik</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-lg-2  col-md-6 col-sm-6">
 					<div class="single-footer-widget tp_widgets">
-						<h6 class="footer_title">Resources</h6>
+						<h6 class="footer_title">Informasi</h6>
 						<ul class="list">
-							<li><a href="#">Guides</a></li>
-							<li><a href="#">Research</a></li>
-							<li><a href="#">Experts</a></li>
-							<li><a href="#">Agencies</a></li>
+							<li><a href="#">download</a></li>
+							<li><a href="#">Jadwal Buka Puasa</a></li>
+							<li><a href="#">Jadwal Penceramah</a></li>
+							<li><a href="#">Brosur</a></li>
 						</ul>
 					</div>
 				</div>
