--- a/blog.html
+++ b/blog.html
@@ -520,23 +520,23 @@
             <div class="row">
                 <div class="col-lg-2  col-md-6 col-sm-6">
                     <div class="single-footer-widget tp_widgets">
-                        <h6 class="footer_title">Top Products</h6>
+                        <h6 class="footer_title">Events</h6>
                         <ul class="list">
-                            <li><a href="#">Managed Website</a></li>
-                            <li><a href="#">Manage Reputation</a></li>
-                            <li><a href="#">Power Tools</a></li>
-                            <li><a href="#">Marketing Service</a></li>
+                            <li><a href="#">Semarak Ramadhan</a></li>
+                            <li><a href="#">Lomba </a></li>
+                            <li><a href="#">Tabligh Akbar</a></li>
+                            <li><a href="#">Talkshow</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-2  col-md-6 col-sm-6">
                     <div class="single-footer-widget tp_widgets">
-                        <h6 class="footer_title">Quick Links</h6>
+                        <h6 class="footer_title">Kajian</h6>
                         <ul class="list">
-                            <li><a href="#">Jobs</a></li>
-                            <li><a href="#">Brand Assets</a></li>
-                            <li><a href="#">Investor Relations</a></li>
-                            <li><a href="#">Terms of Service</a></li>
+                            <li><a href="#">Kajian Subuh</a></li>
+                            <li><a href="#">Kajian Sore</a></li>
+                            <li><a href="#">Kajian Iktikaf</a></li>
+                            <li><a href="#">Kajian tematik</a></li>
                         </ul>
                     </div>
                 </div>
@@ -544,21 +544,21 @@
                     <div class="single-footer-widget tp_widgets">
                         <h6 class="footer_title">Features</h6>
                         <ul class="list">
-                            <li><a href="#">Jobs</a></li>
-                            <li><a href="#">Brand Assets</a></li>
-                            <li><a href="#">Investor Relations</a></li>
-                            <li><a href="#">Terms of Service</a></li>
+                            <li><a href="#">Kajian Subuh</a></li>
+                            <li><a href="#">Kajian Sore</a></li>
+                            <li><a href="#">Kajian Iktikaf</a></li>
+                            <li><a href="#">Kajian tematik</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-2  col-md-6 col-sm-6">
                     <div class="single-footer-widget tp_widgets">
-                        <h6 class="footer_title">Resources</h6>
+                        <h6 class="footer_title">Informasi</h6>
                         <ul class="list">
-                            <li><a href="#">Guides</a></li>
-                            <li><a href="#">Research</a></li>
-                            <li><a href="#">Experts</a></li>
-                            <li><a href="#">Agencies</a></li>
+                            <li><a href="#">download</a></li>
+                            <li><a href="#">Jadwal Buka Puasa</a></li>
+                            <li><a href="#">Jadwal Penceramah</a></li>
+                            <li><a href="#">Brosur</a></li>
                         </ul>
                     </div>
                 </div>
