--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
 	<section class="team_area p_120">
 		<div class="container">
 			<div class="main_title">
-				<h2>Meet Our Faculty</h2>
-				<p>There is a moment in the life of any aspiring astronomer that it is time to buy that first telescope.
-					It’s exciting to think about setting up your own viewing station.</p>
+				<h2>Struktur Kepanitiaan</h2>
+				<p>Berikut adalah struktur kepanitiaan yang bertugas dalam mengelola dan mengorganisir kegiatan Ramadhan
+					di Syuhada untuk memastikan semua program berjalan dengan baik dan lancar.</p>
 			</div>
 			<div class="row team_inner">
 				<div class="col-lg-3 col-sm-6">
@@ -350,7 +350,7 @@
 				<div class="item">
 					<div class="testi_item">
 						<img src="img/testimonials/testi-3.png" alt="">
-						<h4>Fannie Rowe</h4>
+						<h4>Ujang Candra</h4>
 						<ul class="list">
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
@@ -366,7 +366,7 @@
 				<div class="item">
 					<div class="testi_item">
 						<img src="img/testimonials/testi-3.png" alt="">
-						<h4>Fannie Rowe</h4>
+						<h4>Ujang Candra</h4>
 						<ul class="list">
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
@@ -382,7 +382,7 @@
 				<div class="item">
 					<div class="testi_item">
 						<img src="img/testimonials/testi-3.png" alt="">
-						<h4>Fannie Rowe</h4>
+						<h4>Ujang Candra</h4>
 						<ul class="list">
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
@@ -406,9 +406,10 @@
 			<div class="row packages_inner">
 				<div class="col-lg-4">
 					<div class="packages_text">
-						<h3>Choose <br />Course Packages</h3>
-						<p>There is a moment in the life of any aspiring astronomer that it is time to buy that first
-							telescope. It’s exciting to think about setting up your own viewing station.</p>
+						<h3>Open <br />Sponshorsip</h3>
+						<p>Kami membuka kesempatan bagi siapa saja yang ingin berpartisipasi dalam kegiatan Ramadhan di
+							Syuhada melalui program sponsorship untuk mendukung berbagai kegiatan yang akan
+							dilaksanakan.</p>
 					</div>
 				</div>
 				<div class="col-lg-4">
@@ -426,7 +427,7 @@
 							</ul>
 						</div>
 						<div class="pack_footer">
-							<h4>£399.00</h4>
+							<h4>12000K</h4>
 							<a class="main_btn" href="#">Join Now</a>
 						</div>
 					</div>
@@ -446,7 +447,7 @@
 							</ul>
 						</div>
 						<div class="pack_footer">
-							<h4>£399.00</h4>
+							<h4>5000K</h4>
 							<a class="main_btn" href="#">Join Now</a>
 						</div>
 					</div>
@@ -534,23 +535,23 @@
 			<div class="row">
 				<div class="col-lg-2  col-md-6 col-sm-6">
 					<div class="single-footer-widget tp_widgets">
-						<h6 class="footer_title">Top Products</h6>
+						<h6 class="footer_title">Events</h6>
 						<ul class="list">
-							<li><a href="#">Managed Website</a></li>
-							<li><a href="#">Manage Reputation</a></li>
-							<li><a href="#">Power Tools</a></li>
-							<li><a href="#">Marketing Service</a></li>
+							<li><a href="#">Semarak Ramadhan</a></li>
+							<li><a href="#">Lomba </a></li>
+							<li><a href="#">Tabligh Akbar</a></li>
+							<li><a href="#">Talkshow</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-lg-2  col-md-6 col-sm-6">
 					<div class="single-footer-widget tp_widgets">
-						<h6 class="footer_title">Quick Links</h6>
+						<h6 class="footer_title">Kajian</h6>
 						<ul class="list">
-							<li><a href="#">Jobs</a></li>
-							<li><a href="#">Brand Assets</a></li>
-							<li><a href="#">Investor Relations</a></li>
-							<li><a href="#">Terms of Service</a></li>
+							<li><a href="#">Kajian Subuh</a></li>
+							<li><a href="#">Kajian Sore</a></li>
+							<li><a href="#">Kajian Iktikaf</a></li>
+							<li><a href="#">Kajian tematik</a></li>
 						</ul>
 					</div>
 				</div>
@@ -558,21 +559,21 @@
 					<div class="single-footer-widget tp_widgets">
 						<h6 class="footer_title">Features</h6>
 						<ul class="list">
-							<li><a href="#">Jobs</a></li>
-							<li><a href="#">Brand Assets</a></li>
-							<li><a href="#">Investor Relations</a></li>
-							<li><a href="#">Terms of Service</a></li>
+							<li><a href="#">Kajian Subuh</a></li>
+							<li><a href="#">Kajian Sore</a></li>
+							<li><a href="#">Kajian Iktikaf</a></li>
+							<li><a href="#">Kajian tematik</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-lg-2  col-md-6 col-sm-6">
 					<div class="single-footer-widget tp_widgets">
-						<h6 class="footer_title">Resources</h6>
+						<h6 class="footer_title">Informasi</h6>
 						<ul class="list">
-							<li><a href="#">Guides</a></li>
-							<li><a href="#">Research</a></li>
-							<li><a href="#">Experts</a></li>
-							<li><a href="#">Agencies</a></li>
+							<li><a href="#">download</a></li>
+							<li><a href="#">Jadwal Buka Puasa</a></li>
+							<li><a href="#">Jadwal Penceramah</a></li>
+							<li><a href="#">Brosur</a></li>
 						</ul>
 					</div>
 				</div>
