--- a/course-details.html
+++ b/course-details.html
@@ -123,7 +123,7 @@
 					<ul class="nav nav-tabs" id="myTab" role="tablist">
 						<li class="nav-item">
 							<a class="nav-link" id="home-tab" data-toggle="tab" href="#home" role="tab"
-								aria-controls="home" aria-selected="true">Objectives</a>
+								aria-controls="home" aria-selected="true">Deskripsi</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
@@ -279,12 +279,12 @@
 				<div class="col-lg-4">
 					<div class="c_details_list">
 						<ul class="list">
-							<li><a href="#">Trainer’s Name <span>George Mathews</span></a></li>
-							<li><a href="#">Course Fee <span>$230</span></a></li>
-							<li><a href="#">Available Seats <span>15</span></a></li>
-							<li><a href="#">Schedule <span>2.00 pm to 4.00 pm</span></a></li>
+							<li><a href="#">Mentor <span>George Mathews</span></a></li>
+							<li><a href="#">Biaya <span>$230</span></a></li>
+							<li><a href="#">Kuota <span>15</span></a></li>
+							<li><a href="#">Pelaksanaan <span>15 Maret 2025</span></a></li>
 						</ul>
-						<a class="main_btn" href="#">Enroll the Course</a>
+						<a class="main_btn" href="#">Daftar</a>
 					</div>
 				</div>
 			</div>
