--- a/index.html
+++ b/index.html
@@ -468,9 +468,9 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="l_blog_item">
 						<img class="img-fluid" src="img/latest-blog/l-blog-1.jpg" alt="">
-						<a class="date" href="#">25 October, 2018 | By Mark Wiens</a>
+						<a class="date" href="#">04 Maret 2025 | by Alifian Alaiul Hadi</a>
 						<a href="single-blog.html">
-							<h4>Addiction When Gambling Becomes A Problem</h4>
+							<h4>Menu Masakan Nusantara Di Masjid Syuhada</h4>
 						</a>
 						<p>Computers have become ubiquitous in almost every facet of our lives. At work, desk jockeys
 							spend hours in front of their desktops, while delivery</p>
@@ -479,9 +479,9 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="l_blog_item">
 						<img class="img-fluid" src="img/latest-blog/l-blog-2.jpg" alt="">
-						<a class="date" href="#">25 October, 2018 | By Mark Wiens</a>
+						<a class="date" href="#">04 Maret 2025 | by Alifian Alaiul Hadi</a>
 						<a href="single-blog.html">
-							<h4>Addiction When Gambling Becomes A Problem</h4>
+							<h4>Menu Masakan Nusantara Di Masjid Syuhada</h4>
 						</a>
 						<p>Computers have become ubiquitous in almost every facet of our lives. At work, desk jockeys
 							spend hours in front of their desktops, while delivery</p>
@@ -490,9 +490,9 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="l_blog_item">
 						<img class="img-fluid" src="img/latest-blog/l-blog-3.jpg" alt="">
-						<a class="date" href="#">25 October, 2018 | By Mark Wiens</a>
+						<a class="date" href="#">04 Maret 2025 | by Alifian Alaiul Hadi</a>
 						<a href="single-blog.html">
-							<h4>Addiction When Gambling Becomes A Problem</h4>
+							<h4>Menu Masakan Nusantara Di Masjid Syuhada</h4>
 						</a>
 						<p>Computers have become ubiquitous in almost every facet of our lives. At work, desk jockeys
 							spend hours in front of their desktops, while delivery</p>
@@ -501,9 +501,9 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="l_blog_item">
 						<img class="img-fluid" src="img/latest-blog/l-blog-4.jpg" alt="">
-						<a class="date" href="#">25 October, 2018 | By Mark Wiens</a>
+						<a class="date" href="#">04 Maret 2025 | by Alifian Alaiul Hadi</a>
 						<a href="single-blog.html">
-							<h4>Addiction When Gambling Becomes A Problem</h4>
+							<h4>Menu Masakan Nusantara Di Masjid Syuhada</h4>
 						</a>
 						<p>Computers have become ubiquitous in almost every facet of our lives. At work, desk jockeys
 							spend hours in front of their desktops, while delivery</p>
