--- a/about-us.html
+++ b/about-us.html
@@ -247,8 +247,8 @@
 							</div>
 						</div>
 						<div class="team_name">
-							<h4>Ethel Davis</h4>
-							<p>Managing Director (Sales)</p>
+							<h4>Riziq Ardhani</h4>
+							<p>Ketua Panitia Ramadhan</p>
 						</div>
 					</div>
 				</div>
@@ -263,8 +263,8 @@
 							</div>
 						</div>
 						<div class="team_name">
-							<h4>Ethel Davis</h4>
-							<p>Managing Director (Sales)</p>
+							<h4>Riziq Ardhani</h4>
+							<p>Ketua Panitia Ramadhan</p>
 						</div>
 					</div>
 				</div>
@@ -279,8 +279,8 @@
 							</div>
 						</div>
 						<div class="team_name">
-							<h4>Ethel Davis</h4>
-							<p>Managing Director (Sales)</p>
+							<h4>Riziq Ardhani</h4>
+							<p>Ketua Panitia Ramadhan</p>
 						</div>
 					</div>
 				</div>
@@ -295,8 +295,8 @@
 							</div>
 						</div>
 						<div class="team_name">
-							<h4>Ethel Davis</h4>
-							<p>Managing Director (Sales)</p>
+							<h4>Riziq Ardhani</h4>
+							<p>Ketua Panitia Ramadhan</p>
 						</div>
 					</div>
 				</div>
