--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
 							</div>
 						</div>
 						<div class="team_name">
-							<h4>Ethel Davis</h4>
-							<p>Managing Director (Sales)</p>
+							<h4>Riziq Ardhani</h4>
+							<p>Ketua Panitia Ramadhan</p>
 						</div>
 					</div>
 				</div>
@@ -301,8 +301,8 @@
 							</div>
 						</div>
 						<div class="team_name">
-							<h4>Ethel Davis</h4>
-							<p>Managing Director (Sales)</p>
+							<h4>Riziq Ardhani</h4>
+							<p>Ketua Panitia Ramadhan</p>
 						</div>
 					</div>
 				</div>
@@ -317,8 +317,8 @@
 							</div>
 						</div>
 						<div class="team_name">
-							<h4>Ethel Davis</h4>
-							<p>Managing Director (Sales)</p>
+							<h4>Riziq Ardhani</h4>
+							<p>Ketua Panitia Ramadhan</p>
 						</div>
 					</div>
 				</div>
@@ -333,8 +333,8 @@
 							</div>
 						</div>
 						<div class="team_name">
-							<h4>Ethel Davis</h4>
-							<p>Managing Director (Sales)</p>
+							<h4>Riziq Ardhani</h4>
+							<p>Ketua Panitia Ramadhan</p>
 						</div>
 					</div>
 				</div>
