--- a/index.html
+++ b/index.html
@@ -277,7 +277,8 @@
 				<div class="col-lg-3 col-sm-6">
 					<div class="team_item">
 						<div class="team_img">
-							<img class="rounded-circle" src="img/team/team-1.jpg" alt="">
+							<img class="rounded-circle" src="https://cdmssyuhada.com/images/struktur/1716616096.jpg"
+								alt="">
 							<div class="hover">
 								<a href="#"><i class="fa fa-facebook"></i></a>
 								<a href="#"><i class="fa fa-twitter"></i></a>
@@ -293,7 +294,8 @@
 				<div class="col-lg-3 col-sm-6">
 					<div class="team_item">
 						<div class="team_img">
-							<img class="rounded-circle" src="img/team/team-2.jpg" alt="">
+							<img class="rounded-circle" src="https://cdmssyuhada.com/images/struktur/1716610210.jpg"
+								alt="">
 							<div class="hover">
 								<a href="#"><i class="fa fa-facebook"></i></a>
 								<a href="#"><i class="fa fa-twitter"></i></a>
@@ -309,7 +311,8 @@
 				<div class="col-lg-3 col-sm-6">
 					<div class="team_item">
 						<div class="team_img">
-							<img class="rounded-circle" src="img/team/team-3.jpg" alt="">
+							<img class="rounded-circle" src="https://cdmssyuhada.com/images/struktur/1716616171.jpg"
+								alt="">
 							<div class="hover">
 								<a href="#"><i class="fa fa-facebook"></i></a>
 								<a href="#"><i class="fa fa-twitter"></i></a>
@@ -325,7 +328,8 @@
 				<div class="col-lg-3 col-sm-6">
 					<div class="team_item">
 						<div class="team_img">
-							<img class="rounded-circle" src="img/team/team-4.jpg" alt="">
+							<img class="rounded-circle" src="https://cdmssyuhada.com/images/struktur/1716616323.jpg"
+								alt="">
 							<div class="hover">
 								<a href="#"><i class="fa fa-facebook"></i></a>
 								<a href="#"><i class="fa fa-twitter"></i></a>
@@ -349,7 +353,8 @@
 			<div class="testi_slider owl-carousel">
 				<div class="item">
 					<div class="testi_item">
-						<img src="img/testimonials/testi-3.png" alt="">
+						<img src="https://cdmssyuhada.com/images/struktur/1716615782.jpg" alt="" height="100px"
+							width="100px" class="rounded-circle">
 						<h4>Ujang Candra</h4>
 						<ul class="list">
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
@@ -365,7 +370,8 @@
 				</div>
 				<div class="item">
 					<div class="testi_item">
-						<img src="img/testimonials/testi-3.png" alt="">
+						<img src="https://cdmssyuhada.com/images/struktur/1716615782.jpg" alt="" height="100px"
+							width="100px" class="rounded-circle">
 						<h4>Ujang Candra</h4>
 						<ul class="list">
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
@@ -381,7 +387,8 @@
 				</div>
 				<div class="item">
 					<div class="testi_item">
-						<img src="img/testimonials/testi-3.png" alt="">
+						<img src="https://cdmssyuhada.com/images/struktur/1716615782.jpg" alt="" height="100px"
+							width="100px" class="rounded-circle">
 						<h4>Ujang Candra</h4>
 						<ul class="list">
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
